fixing font size and attempting to make youtube to autoplay on mobile but it didnt work out

--- a/a-drop-a-day/src/components/timer/timer.styles.scss
+++ b/a-drop-a-day/src/components/timer/timer.styles.scss
@@ -19,7 +19,7 @@
     }
   }
   h5 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     // padding: 0;
   }
   h3 {
